# amakaflow-fitfiletool

./: README.md  pyproject.toml  requirements.txt
src/amakaflow_fitfiletool/: __init__.py  fit_builder.py  fit_parser.py  garmin_exercises.json  garmin_lookup.py  preview.py
src/amakaflow_fitfiletool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/fixtures/: working_hyrox_cardio.fit
